<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/month_view_container"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/month_view_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/month_view_previous"
            android:textAppearance="@style/Theme.MaterialComponents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:backgroundTint="@android:color/transparent"
            app:iconTint="@android:color/darker_gray"
            app:icon="@drawable/ic_arrow_left"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/month_view_current_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_centerHorizontal="true"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/month_view_next"
            android:textAppearance="@style/Theme.MaterialComponents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:padding="10dp"
            android:backgroundTint="@android:color/transparent"
            app:iconTint="@android:color/darker_gray"
            android:textColor="#000"
            app:icon="@drawable/ic_arrow_right"
            />
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/month_view_week_headers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#e3e3e0">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/weekday_sunday"
            android:gravity="center"
            android:layout_weight="1"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/weekday_monday"
            android:gravity="center"
            android:layout_weight="1"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/weekday_tuesday"
            android:gravity="center"
            android:layout_weight="1"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/weekday_wednesday"
            android:gravity="center"
            android:layout_weight="1"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/weekday_thursday"
            android:gravity="center"
            android:layout_weight="1"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/weekday_friday"
            android:gravity="center"
            android:layout_weight="1"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/weekday_saturday"
            android:gravity="center"
            android:layout_weight="1"/>
    </LinearLayout>
    <com.tiledcalendar.tiledmonthview.GridViewScrollView
        android:id="@+id/month_view_grid_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <GridView
                android:id="@+id/month_view_previous_grid"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:numColumns="7"
                android:gravity="center"
                android:background="@drawable/grid_view_background"
                />
            <GridView
                android:id="@+id/month_view_grid"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:numColumns="7"
                android:gravity="center"
                android:background="@drawable/grid_view_background"
                />
            <GridView
                android:id="@+id/month_view_next_grid"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:numColumns="7"
                android:gravity="center"
                android:background="@drawable/grid_view_background"
                />
        </LinearLayout>
    </com.tiledcalendar.tiledmonthview.GridViewScrollView>

</LinearLayout>